--- a/workshop/3-Books-optional/style.css
+++ b/workshop/3-Books-optional/style.css
@@ -4,6 +4,7 @@ body {
   width: calc(100vw - 80px);
   height: calc(100vh - 80px);
   display: flex;
+  font-family: monospace;
 }
 
 .left-part {
@@ -12,31 +13,128 @@ body {
   background: #00adb5;
   display: grid;
   grid-template-rows: 1fr 3fr;
+  border-top-left-radius: 5px;
+  border-bottom-left-radius: 5px;
 }
 .current-status {
   display: grid;
   grid-template-columns: 1fr 1fr;
 }
+.current-book, .last-book {
+  width: calc(100% - 30px);
+  height: calc(100% - 30px);
+  background: #393e46;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  border-radius: 5px;
+} 
 .current-book {
   margin: 20px 10px 10px 20px;
-  width: calc(100% - 30px);
-  height: calc(100% - 30px);
-  background: #393e46;
-} 
+}
 .last-book {
   margin: 20px 20px 10px 10px;
-  width: calc(100% - 30px);
-  height: calc(100% - 30px);
-  background: #393e46;
+}
+.current-status h2 {
+  margin: 40px 0;
+  text-align: center;
+  color: #eeeeee;
+  font-weight: bolder;
+  font-size: 1.5rem;
+}
+.buttons {
+  display: flex;
+  width: 100%;
+}
+.buttons button {
+  flex: 1;
+  height: 40px;
+  background: #eeeeee;
+  border: none;
+  transition: background 0.2s;
+  font-size: 1.3rem;
+  font-family: monospace;
+  font-weight: bolder;
+  color: #393e46;
+}
+button:hover {
+  background: #cccccc;
+}
+#bookStart, #bookOver {
+  border-bottom-left-radius: 5px;
+  border-bottom-right-radius: 5px;
 }
 .form {
   width: calc(100% - 40px);
   height: calc(100% - 30px);
   margin: 10px 20px 20px 20px;
   background: #222831;
+  border-radius: 5px;
+  display: flex;
+  flex-direction: column;
+  color: #eeeeee;
+  text-align: center;
+}
+.form h2 {
+  flex: 1;
+  font-size: 1.7rem;
+}
+.inputs {
+  flex: 15;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+  align-items: center;
+}
+#submitButton {
+  width: 100%;
+  height: 40px;
+  margin-top: 60px;
+  border: none;
+  border-bottom-right-radius: 5px;
+  border-bottom-left-radius: 5px;
+  font-size: 1.3rem;
+  font-family: monospace;
+  font-weight: bolder;
+  color: #222831;
+  transition: background 0.2s;
+}
+.readStatus {
+  transform: scale(2);
+  margin-top: 60px;
+}
+#readStatus {
+  padding: 0;
+  margin: 0;
+  vertical-align: bottom;
+}
+#bookGenre, #bookAuthor, #bookTitle {
+  width: 400px;
+  height: 40px;
+  padding-left: 10px;
+  margin-top: 50px;
+  border-radius: 5px;
 }
 .library {
   height: 100%;
   flex: 2;
   background: #00adb5;
+  border-top-right-radius: 5px;
+  border-bottom-right-radius: 5px;
+}
+.library h2 {
+  font-weight: bolder;
+  font-size: 1.5rem;
+  background: #393e46;
+  margin: 20px 20px 0 0;
+  border-radius: 5px;
+  color: #eeeeee;
+  height: 40px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.library div {
+  text-align: center;
+  margin: 5px 0 5px 0;
 }
