book over btn functionality and some styling

--- a/workshop/3-Books-optional/style.css
+++ b/workshop/3-Books-optional/style.css
@@ -35,6 +35,10 @@ body {
 .last-book {
   margin: 20px 20px 10px 10px;
 }
+#lastBook, #currentBook {
+  margin: 30px 20px 0 20px;
+  word-break: break-word;
+}
 .current-status h2 {
   margin: 40px 0;
   text-align: center;
@@ -115,6 +119,9 @@ button:hover {
   margin-top: 50px;
   border-radius: 5px;
 }
+
+
+
 .library {
   height: 100%;
   flex: 2;
@@ -134,7 +141,36 @@ button:hover {
   align-items: center;
   justify-content: center;
 }
-.library div {
-  text-align: center;
+.libraryBooks {
   margin: 5px 0 5px 0;
+  height: 30px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  word-break: break-word;
+}
+.librarySections {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin: 5px 20px 0 0;
+  height: 30px;
+}
+.librarySections h3 {
+  margin: 0;
+  background: #393e46;
+  height: 100%;
+  border-radius: 5px;
+  color: #eeeeee;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.libraryTitle, .libraryAuthor {
+  width: 165px;
+  height: 30px;
+}
+.libraryRead {
+  width: 60px;
+  height: 30px;
 }
