added genre column in library

--- a/workshop/3-Books-optional/style.css
+++ b/workshop/3-Books-optional/style.css
@@ -166,8 +166,8 @@ button:hover {
   justify-content: center;
   align-items: center;
 }
-.libraryTitle, .libraryAuthor {
-  width: 165px;
+.libraryTitle, .libraryAuthor, .libraryGenre {
+  width: 25%;
   height: 30px;
 }
 .libraryRead {
