--- a/workshop/3-Books-optional/style.css
+++ b/workshop/3-Books-optional/style.css
@@ -33,13 +33,22 @@ html {
 .read-lastread {
   display: flex;
   justify-content: space-evenly;
+  align-items: flex-start;
   min-height: 400px;
-  margin-top: 40px;
+  max-width: 80%;
+  margin: 0 auto;
+  margin-top: 20px;
+  margin-bottom: 40px;
   font-size: 1rem;
+  border-radius: 4px;
+  box-shadow: 1px 1px 8px #888888;
 }
 
 .title {
   font-size: 1.5rem;
+}
+.subtitle {
+  margin-top: 10px;
 }
 
 .addBookForm {
@@ -125,13 +134,18 @@ label {
   justify-content: space-between;
 }
 
-.button {
-  font-family: "Jost";
+.btn {
+  font-family: "Poppins";
   font-weight: bold;
   color: white;
   font-size: 1rem;
   padding: 15px 50px;
   border-radius: 8px;
+  margin-bottom: 10px;
+}
+
+button {
+  margin-bottom: 10px;
 }
 
 .clear {
